@@ -1,4 +1,7 @@
 
+2009-03-19  0:12 Ali aliov@xfce.org 
+	 * : Fix a bug regarding the network manager message sleep
+
 2009-03-18 23:29 Ali aliov@xfce.org 
 	 * : Doing hibernate/suspend in a timeout function
 
